[package]
name = "epochs-cli"
version = "0.6.0"
authors = ["Tim Heaney <oylenshpeegul@gmail.com>"]
description = "Check strings given on the command line against different epochs."
license = "MPL-2.0"
repository = "https://github.com/oylenshpeegul/epochs-cli"
readme = "README.md"
edition = "2024"

[[bin]]
name = "epochs"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crockford = "1.1"
epochs = "0.2"
itertools = "0.14"
maplit = "1.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
